[fix] age condition

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- bootstrap -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-grid.min.css' integrity='sha512-i1b/nzkVo97VN5WbEtaPebBG8REvjWeqNclJ6AItj7msdVcaveKrlIIByDpvjk5nwHjXkIqGZscVxOrTb9tsMA==' crossorigin='anonymous'/>
 
-    <title>Document</title>
+    <title>Biglietto Form</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -23,9 +23,9 @@
             <input type="text" placeholder="Km" id="km">
             <!-- categoria età -->
             <select name="eta"class="age-select form-select">
-                <option value="">Minorenne</option>
-                <option value="">Standard</option>
-                <option value="">Over 65</option>
+                <option value="1">Minorenne</option>
+                <option value="2">Standard</option>
+                <option value="3">Over 65</option>
             </select>
 
         </form>
