[add] price function

--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@
 
         <div class="box-ticket">
             <!-- box name -->
-            <div class="box-name">
+            <div class="box-name debug">
                 <h4>NOME PASSEGGERO</h4>
                 <p id="ticket-name"></p>
             </div>
-
+            <!-- box dettagli -->
+            <div class="box-details debug">
+                <h5>Costo Biglietto</h5>
+                <p id="ticket-price"></p>
+            </div>
         </div>
         
     </div>
