[add] class d-none function

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- /BOX FORM -->
 
     <!-- BOX TICKET -->
-    <div class="ticket">
+    <div class="ticket d-none">
 
         <h2>dettaglio passeggeri</h2>
 
