[add] codice cp e carrozza

--- a/index.html
+++ b/index.html
@@ -52,10 +52,20 @@
                 <h4>NOME PASSEGGERO</h4>
                 <p id="ticket-name"></p>
             </div>
-            <!-- box dettagli -->
+            <!-- box carrozza -->
             <div class="box-details debug">
-                <h5>Costo Biglietto</h5>
-                <p id="ticket-price"></p>
+                <h5>Carrozza</h5>
+                <p id="ticket-coach"></p>
+                <!-- box codice cp -->
+                <div class="box-details debug">
+                    <h5>Codice CP</h5>
+                    <p id="ticket-cp"></p>
+                </div>
+                <!-- box dettagli -->
+                <div class="box-details debug">
+                    <h5>Costo Biglietto</h5>
+                    <p id="ticket-price"></p>
+                </div>
             </div>
         </div>
         
