--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             </div>
             
-            <div class="buttons mt-5">
+            <div class="buttons mt-4">
                 <!-- button genera -->
                 <button class="btn-gen btn btn-primary">Genera</button>
                 <button type="reset" class="btn-res btn btn-primary">Annulla</button>
@@ -60,7 +60,7 @@
 
         <h1>IL TUO BIGLIETTO</h1>
         <div class="ticket">
-            <h2>dettaglio passeggeri</h2>
+            <h2>Dettaglio passeggeri</h2>
                 
             <div class="box-ticket">
                     <!-- box name -->
